--- a/tidy_data.ipynb
+++ b/tidy_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dccf46f5",
+   "id": "86cfd790",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efe0ce3c",
+   "id": "7984c72d",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1a57cd36",
+   "id": "7b4b306f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a1d3dd70",
+   "id": "b8b45934",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e2f8f40e",
+   "id": "0e830111",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c8ad5635",
+   "id": "d666298a",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4a2e4d4e",
+   "id": "858293ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0471052b",
+   "id": "81308d73",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "de59563a",
+   "id": "2923b379",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e68189b",
+   "id": "6814ad7f",
    "metadata": {},
    "source": [
     "### 2.Coffee Levels\n",
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "07dbfdef",
+   "id": "49651b2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0e8e7ca7",
+   "id": "e0f53ab7",
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8e8cbc57",
+   "id": "7bb8bc5d",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3f750677",
+   "id": "5daf678a",
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e78c96df",
+   "id": "61652cba",
    "metadata": {},
    "source": [
     "### b. Transform the data so that each carafe is in it's own column."
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9c3d2541",
+   "id": "c1601a62",
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a4024873",
+   "id": "ba04675d",
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c1fd1de4",
+   "id": "98137447",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dc8154c",
+   "id": "5e199989",
    "metadata": {},
    "source": [
     "### c. Is this the best shape for the data?\n",
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afdc0ce1",
+   "id": "e06ec665",
    "metadata": {},
    "source": [
     "### 3. Cake Recipes\n",
@@ -1177,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "90053a63",
+   "id": "9961c258",
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5074a6c6",
+   "id": "31fca39e",
    "metadata": {},
    "source": [
     "### b. Tidy the data as necessary."
@@ -1283,7 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "21dcdd45",
+   "id": "e9a495d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4e4cef1f",
+   "id": "623d0c25",
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "43fb9a5e",
+   "id": "79994a29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "54a3317a",
+   "id": "ea6f1d2f",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a0670d0d",
+   "id": "fed20c67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "32d3fa29",
+   "id": "bfaabf78",
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17c1c973",
+   "id": "117d522a",
    "metadata": {},
    "source": [
     "### c. Which recipe, on average, is the best?"
@@ -1627,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "646a41d4",
+   "id": "2d7df018",
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c2ad621",
+   "id": "1f702ee3",
    "metadata": {},
    "source": [
     "### recipe b"
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d98c2efc",
+   "id": "29a0b6d2",
    "metadata": {},
    "source": [
     "### d. Which oven temperature, on average, produces the best results? "
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4468e2c0",
+   "id": "38d3d303",
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "993cdea4",
+   "id": "488152f4",
    "metadata": {},
    "source": [
     "### 275"
@@ -1703,7 +1703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e74661c",
+   "id": "77a85d1f",
    "metadata": {},
    "source": [
     "### e. Which combination of recipe, rack position, and temperature gives the best result?"
@@ -1712,7 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0cb403af",
+   "id": "5e110c42",
    "metadata": {},
    "outputs": [
     {
@@ -1765,11 +1765,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e60e99a",
+   "id": "092b3870",
    "metadata": {},
    "source": [
-    "### recipe b, bottom rack, 300 degrees ( tastey score mean is 99.248541)"
+    "### recipe b, bottom rack, 300 degrees temperature ( highest tastey score mean is 99.248541)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4e36da8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
